--- a/authserver/pom.xml
+++ b/authserver/pom.xml
@@ -55,6 +55,11 @@
     </dependency>
 
     <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+    </dependency>
+
+    <dependency>
       <!-- Java 11 doesn't support Jaxb -->
       <groupId>javax.xml.bind</groupId>
       <artifactId>jaxb-api</artifactId>
@@ -101,6 +106,9 @@
               <resources>
                 <resource>
                   <directory>${project.parent.basedir}/keystore</directory>
+                  <includes>
+                    <include>keystore.jks</include>
+                  </includes>
                 </resource>
               </resources>
             </configuration>
