--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.1.4.RELEASE</version>
+    <version>2.1.6.RELEASE</version>
   </parent>
 
   <properties>
@@ -107,7 +107,7 @@
       <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-dependencies</artifactId>
-        <version>Greenwich.RELEASE</version>
+        <version>Greenwich.SR1</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
